Fix scale alignment and extended whitespace issue

--- a/src/styles/02_components/contentBody.scss
+++ b/src/styles/02_components/contentBody.scss
@@ -177,7 +177,7 @@
     height: 30%;
     background-color: white;
     border-left: 1px solid #3f3f3f;
-    width: 178%;
+    width: 200%;
     position: relative;
     pointer-events: all;
   }
@@ -214,7 +214,7 @@
     }
 
     &.f {
-      left: 6%;
+      left: 0%;
     }
 
     &.g {
